cabal-version:      2.4
name:               astatine
version:            0.0.1.0
synopsis:           The compiler of the Astatine Programming Language.

-- A longer description of the package.
-- description:
homepage:           https://github.com/spydr06/astatine

-- A URL where users can report bugs.
-- bug-reports:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Spydr06
maintainer:         Spydr06 (on github)

-- A copyright notice.
-- copyright:
category:           Language
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:
        LibAstatine
        LibAstatine.Util.Color
        LibAstatine.Context
        LibAstatine.Version
        LibAstatine.Compiler

    -- Modules included in this library but not exported.
    other-modules:
        LibAstatine.Util.Log
        LibAstatine.Util.List
        LibAstatine.Util.Position
        LibAstatine.Token
        LibAstatine.Error
        LibAstatine.File
        LibAstatine.Lexer
        LibAstatine.SExpr
        Paths_astatine

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   src

    default-language: Haskell2010

    ghc-options: -Wall -Wno-name-shadowing

executable astatc
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Args

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        astatine

    hs-source-dirs:   compiler
    default-language: Haskell2010

    ghc-options: -Wall -Wno-name-shadowing

test-suite libastatine-tests
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Tests.hs
    build-depends:    base ^>=4.17.2.0

